# Toudou

./: .pdm-python  README.md  exportedata.csv  mydata.db  pyproject.toml
data/: exportedata.csv  mydata.db  testdata.db
src/: dbInteraction.py  dbtest.py  models.py  services.py  toudou.py  views.py
src/toudou/: __init__.py  models.py  services.py  views.py  wsgi.py
src/toudou/config/: dev.env
src/toudou/static/: styles.css
src/toudou/templates/: home.html  index.html  login.html  toudou-action.html  toudou-create.html  toudou-csv.html  toudou-delete.html  toudou-navbar.html  toudou-table.html  toudou-update.html  toudou-view.html
